refactor(app): changed package.json name myDiary -> mydiary to follow best practices

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myDiary",
+  "name": "mydiary",
   "version": "1.0.0",
   "description": "Diary based API that utilizes Artificial Intelligence to detect the sentiment analysis of the user’s diary entry.",
   "main": "index.js",
